<resources>
    <string name="app_name">T-Rexercize</string>
    <string name="hello_from_calendar">Calendar</string>
    <string name="hello_from_exercises">Categories</string>
    <string name="hello_from_favorites">Hello from Favorites</string>
    <string name="hello_from_profile">Hello from Profile</string>
    <string name="hello_from_home">Hello from Home</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="favorites">Current Goal</string>
    <string name="exercise">Exercise</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_from_main">hello from main</string>
    <string name="day_selected">Day Selected:</string>
    <string name="dino_with_dialog">dino with dialog</string>
    <string name="motivational_quote">Motivational Quote</string>

    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account? \n\n Click here</string>

    <string name="don_t_have_an_account_n_click_here">Don\'t have an account?\n\nClick Here!</string>
    <string name="sign_out">Sign Out</string>
    <string name="total_times_sent">Total Times Sent:</string>
    <string name="textview">TextView</string>
    <string name="contacts">Contacts</string>
    <string name="chat">Chat</string>
    <string name="history">History</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email_username">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="msg_token_fmt">token</string>
    <string name="done">Done</string>
    <string name="hello_from_sign_out">Hello from sign out</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_spongebob_squar">SpongeBob Squarepants</string>
    <string name="lbl_larry_s_gym">Larry\u2019s Gym</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_profile">Profile</string>
    <string name="msg_age_35_weight">Age : 35 Weight : 4 ounces Height : 4 inches BMI: 21 Goals Get arms like Larry Target areas: Arms Core Highest Streak: 10 days</string>
    <string name="goals">Goals</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="longest_streak">Longest Streak</string>
    <string name="target_areas">Target Areas</string>
    <string name="gym">Gym</string>
    <string name="bmi">BMI</string>
    <string name="age">Age</string>
    <string name="this_is_a_body_part">This is a body part</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="choose_image">Choose Image</string>
    <string name="preview">Preview</string>
    <string name="select_picture">Select Picture</string>
    <string name="cancel">Cancel</string>
    <string name="today_s_snap">Today\'s snap:</string>
    <string name="back_button">back button</string>
    <string name="today_s_workout">Today\'s workout:</string>
    <string name="how_did_you_feel">How did you feel?</string>
    <string name="date">date</string>
    <string name="daily_snap_image">daily snap image</string>
    <string name="tasks">Tasks</string>
    <string name="show_goals">Show Goals</string>
    <string name="exercise_list_background">exercise list background</string>
    <string name="take_daily_snap">Take daily snap</string>
    <string name="category">category</string>
    <string name="get_abs">Get abs!</string>
    <string name="goal">Goal</string>
    <string name="restSnap">Have a nice rest day! Make sure to take a rest snap!</string>
    <string name="edit_goals">Edit Goals</string>
    <string name="lbs">lbs</string>
    <string name="dinoabsgoal">Set some goals! \n #DinoAbsGoals</string>
    <string name="name_l">name</string>
    <string name="gym_l">gym</string>
    <string name="age_l">age</string>
    <string name="target_areas_l">target areas</string>
</resources>