<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeScreenFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/exerciseFragment"
        android:icon="@drawable/ic_run"
        android:title="@string/exercise"/>
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"/>
    <item
        android:id="@+id/signOutFragment"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/sign_out" />
</menu>